--- a/webprodigies-plura/package.json
+++ b/webprodigies-plura/package.json
@@ -12,7 +12,7 @@
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.4",
     "@babel/preset-react": "^7.24.7",
-    "@clerk/nextjs": "^5.3.6",
+    "@clerk/nextjs": "^5.3.7",
     "@clerk/themes": "^2.1.23",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.0",
@@ -50,7 +50,7 @@
     "embla-carousel-react": "^8.2.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.436.0",
-    "next": "14.2.6",
+    "next": "^14.2.7",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-day-picker": "8.10.1",
