--- a/webprodigies-plura/package.json
+++ b/webprodigies-plura/package.json
@@ -15,6 +15,8 @@
     "@clerk/nextjs": "^5.3.7",
     "@clerk/themes": "^2.1.23",
     "@hookform/resolvers": "^3.9.0",
+    "@prisma/client": "^5.19.1",
+    "@prisma/debug": "^5.19.1",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -42,6 +44,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@tremor/react": "^3.18.2",
     "@uploadthing/react": "^6.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -62,6 +65,7 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.13.2",
+    "uuid": "^10.0.0",
     "vaul": "^0.9.1",
     "zod": "^3.23.8"
   },
