--- a/webprodigies-plura/package.json
+++ b/webprodigies-plura/package.json
@@ -15,7 +15,7 @@
     "@clerk/nextjs": "^5.3.7",
     "@clerk/themes": "^2.1.23",
     "@hookform/resolvers": "^3.9.0",
-    "@prisma/client": "^5.19.1",
+    "@prisma/client": "^5.20.0",
     "@prisma/debug": "^5.19.1",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
@@ -44,6 +44,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@tanstack/react-table": "^8.20.5",
     "@tremor/react": "^3.18.2",
     "@types/uuid": "^10.0.0",
     "@uploadthing/react": "^6.7.2",
@@ -63,6 +64,7 @@
     "react-resizable-panels": "^2.1.1",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
+    "stripe": "^17.0.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.13.2",
